Fixed published icon for long edition names, moved icon to left side to avoid overflowing to a second line

--- a/src/stylesheets/EditionsDropdown.css
+++ b/src/stylesheets/EditionsDropdown.css
@@ -1,6 +1,12 @@
 /* Add space between any published "star" and the edition name */
 .dropdownPublishedIcon {
-	margin-left: 12px;
+	margin-right: 12px;
+}
+
+/* To keep all edition names aligned, the published icon is always there but
+	toggled between visible and invisible. */
+.dropdownPublishedIconHidden {
+	visibility: hidden;
 }
 
 /* Add space between "plus" and the button text */
